changed the unhappy flow

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,20 @@ DEMO_MODE=false
 # =============================================================================
 
 # PINATA_JWT=your_pinata_jwt_here
+
+# =============================================================================
+# AI AGENTS - OpenClaw with Groq LLM
+# =============================================================================
+
+# Groq API key for AI agent decision making (FREE tier available)
+# Get yours at: https://console.groq.com
+GROQ_API_KEY=gsk_your_groq_api_key_here
+
+# Agent IDs (must match configured agents above)
+TRADER_AGENT_ID=Trader-SpreadHawk
+SOLVER_1_ID=Solver-AlphaStrike
+SOLVER_2_ID=Solver-ProfitMax
+SOLVER_3_ID=Solver-Balanced
+
+# API base URL for agents (game server location)
+API_BASE_URL=http://localhost:3001
