--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "type": "module",
   "scripts": {
     "compile": "forge build",
+    "build": "tsc -p tsconfig.build.json",
+    "build:local": "tsc -p tsconfig.build.json",
     "deploy": "tsx scripts/deploy.ts",
     "deploy:sepolia": "tsx scripts/deploy-sepolia.ts",
     "start:anvil": "tsx scripts/start-anvil.ts",
     "start:ganache": "tsx scripts/start-ganache.ts",
     "start": "tsx scripts/start-ganache.ts",
     "start:sepolia": "tsx src/sepolia/game-server.ts",
+    "start:local": "npm run build:local && node dist/scripts/start-local.js",
+    "start:local:agents": "npm run build:local && node dist/scripts/start-local.js --with-agents",
+    "deploy:local": "tsx scripts/deploy-local.ts",
+    "mock:4mica": "npm run build:local && node dist/src/local/mock-4mica-api.js",
+    "facilitator:local": "tsx src/local/mock-facilitator.ts",
     "deposit:collateral": "tsx scripts/deposit-collateral.ts",
     "check:collateral": "tsx scripts/check-collateral.ts",
     "test:solver-scope": "tsx scripts/test-solver-scope.ts",
+    "test:sdk-flow": "tsx scripts/test-sdk-flow.ts",
     "show:wallets": "tsx scripts/show-wallets.ts",
     "debug:4mica": "tsx scripts/debug-4mica-flow.ts",
     "debug:4mica-raw": "tsx scripts/debug-4mica-raw.ts",
@@ -35,12 +43,15 @@
     "dashboard:install": "cd react-demo && npm install",
     "dashboard": "cd react-demo && npm run dev",
     "dashboard:build": "cd react-demo && npm run build",
-    "test": "vitest"
+    "start:agents": "tsx src/agents/run-agents.ts",
+    "test": "vitest",
+    "postinstall": "bash scripts/apply-sdk-patch.sh"
   },
   "dependencies": {
     "@4mica/sdk": "^0.5.3",
     "@4mica/x402": "^0.1.0",
     "chalk": "^5.3.0",
+    "groq-sdk": "^0.34.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
