--- a/package.json
+++ b/package.json
@@ -44,17 +44,16 @@
     "dashboard": "cd react-demo && npm run dev",
     "dashboard:build": "cd react-demo && npm run build",
     "start:agents": "tsx src/agents/run-agents.ts",
-    "test": "vitest",
-    "postinstall": "bash scripts/apply-sdk-patch.sh"
+    "test": "vitest"
   },
   "dependencies": {
-    "@4mica/sdk": "^0.5.3",
+    "@4mica/sdk": "^0.5.6",
     "@4mica/x402": "^0.1.0",
     "chalk": "^5.3.0",
-    "groq-sdk": "^0.34.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "groq-sdk": "^0.34.0",
     "viem": "^2.45.1",
     "ws": "^8.16.0"
   },
@@ -63,12 +62,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
     "@types/ws": "^8.5.10",
-    "ganache": "^7.9.2",
+    "ganache": "^6.4.5",
     "hardhat": "^3.1.6",
-    "solc": "^0.8.20",
+    "solc": "^0.5.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
-    "vitest": "^2.1.0"
+    "vitest": "^4.0.18"
   }
 }
